<resources>

    // global
    <string name="global_logo_desc">PUPDate Logo</string>

    // auto-fill hints
    <string name="autofill_puppy_name">Your puppy\'s name</string>

    // main activity
    <string name="app_name">PUPDate</string>
    <string name="app_description">Schedule, track and rate your puppy\'s training progress</string>
    // main activity - first visit
    <string name="welcome_message">What\'s your puppy\'s name?</string>
    <string name="welcome_back">Is %1$s ready for training?</string>
    <string name="go_btn">Go!</string>

    // instructions activity
    <string name="h1_instructions">How To Use</string>
    <string name="h2_app_features">App Features</string>
    <string name="instruc_app_features">Head back to the menu to use any of the below features.</string>
    <string name="instruc_record">Record Training Session:</string>
    <string name="instruc_record_desc">Use the dropdowns to select the three tricks your puppy practiced.
        Rate how your pup did!</string>
    <string name="instruc_progress">View Training Progress:</string>
    <string name="instruc_progress_desc">See how your little one is progressing!</string>
    <string name="instruc_settings">Configure Settings:</string>
    <string name="instruc_settings_desc">Made a mistake entering your puppy\'s name? No worries.
        Change it here. You can also set an alarm to be reminded of your next PUPDate!</string>
    <string name="instruct_fifteen_minutes">All it takes is 15 minutes a day!</string>
    <string name="h2_training_sessions">Training Sessions</string>
    <string name="instruc_sessions">Keep training sessions short (about 15 minutes maximum).
        Focus on three tricks per sessions: teaching one new trick, and reviewing two others.
        Use high value treats (something your dog <i>really</i> likes) to keep their attention.
    </string>

    // settings activity
    <string name="h1_settings">Settings</string>
    <string name="h2_about">About the App</string>
    <string name="settings_created_by">PUPDate v.1.0 | Created by: Bryanna Lucyk</string>
    <string name="settings_app_description">Use this app to schedule, track and rate your puppy\'s training progress.</string>
    <string name="h2_change_name">Change Puppy\'s Name</string>
    <string name="btn_update_name">Update Name!</string>
    <string name="h2_schedule_session">Schedule Daily Training Sessions</string>
    <string name="settings_chosen_time">00:00</string>
    <string name="btn_pick_time">Pick Time</string>
    <string name="btn_set_alarm">Set Alarm!</string>

    // session activity
    <string name="h1_session">Session</string>
    <string name="h2_activity">Activities</string>
    <string name="h2_rating">How did your puppy do?</string>
    <string name="btn_choose_date">Choose Date</string>
    <string name="btn_choose_time">Choose Time</string>
    <string name="session_date"></string>
    <string name="session_time"></string>

    // NOTE: these must match the activities in the database
    <string-array name="activities">
        <item>Bring It</item>
        <item>Come</item>
        <item>Down</item>
        <item>Drop It</item>
        <item>Heel</item>
        <item>Leave It</item>
        <item>"Look at Me"</item>
        <item>Quiet</item>
        <item>Roll Over</item>
        <item>Shake a Paw</item>
        <item>Sit</item>
        <item>Speak</item>
        <item>Stand on Hind Legs</item>
        <item>Stand Still</item>
        <item>Stay</item>
        <item>Touch</item>
    </string-array>
    <string name="record">Record Session!</string>
    <string name="cancel">Cancel</string>

    // navigation activity
    <string name="h1_navigation">PUPDate</string>
    <string name="btn_nav_instructions">Instructions/How to Use</string>
    <string name="btn_nav_settings">Configure Settings</string>
    <string name="btn_nav_record">Record Training Session</string>
    <string name="btn_nav_history">View Training Progress</string>

    // history activity
    <string name="h1_history">Progress</string>
    <string name="btn_clear_sessions">Clear %1$s Recorded Session(s)</string>
    <string name="btn_no_sessions">No sessions recorded!</string>

    // recycler view
    <string name="btn_delete">Delete</string>

</resources>