<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/petappbg"
    android:onClick="onClickGo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoMA"
        android:layout_width="183dp"
        android:layout_height="144dp"
        android:contentDescription="@string/global_logo_desc"
        app:layout_constraintBottom_toTopOf="@+id/appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/puppylogo_dottedoutline" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/appDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMA" />

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="244dp"
        android:layout_height="55dp"
        android:fontFamily="@font/open_sans_italic"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textColor="#FFFDFD"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/welcomeMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/welcome_message"
        android:textColor="#FBFAFA"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPuppyName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appDescription" />

    <EditText
        android:id="@+id/editTextPuppyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:inputType="textPersonName"
        android:textColor="@color/theme_secondary"
        android:textColorLink="@color/theme_secondary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/mainGoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />

    <Button
        android:id="@+id/mainGoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/open_sans_bold"
        android:onClick="onClickGo"
        android:text="@string/go_btn"
        android:textColor="@color/theme_primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPuppyName" />

</androidx.constraintlayout.widget.ConstraintLayout>