<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/petappbg"
    android:orientation="vertical"
    tools:context=".HistoryActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/h1History"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/h1_history"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/logoHA"
            android:layout_width="83dp"
            android:layout_height="75dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="19dp"
            android:baselineAligned="false"
            android:contentDescription="@string/global_logo_desc"
            android:src="@drawable/puppylogo_bluebg" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonClearAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/open_sans_bold"
        android:onClick="clearSessions"
        android:text="@string/btn_clear_sessions" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp" />

</LinearLayout>