<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/petappbg"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/h1Session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingLeft="20dp"
                    android:text="@string/h1_settings"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/logoSA"
                    android:layout_width="83dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="19dp"
                    android:baselineAligned="false"
                    android:src="@drawable/puppylogo_bluebg" />

            </LinearLayout>

            <TextView
                android:id="@+id/settingsCreatedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/theme_primary"
                android:backgroundTintMode="multiply"
                android:fontFamily="@font/open_sans_italic"
                android:padding="20dp"
                android:text="@string/settings_created_by"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/h2About"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/open_sans_bold"
                android:padding="20dp"
                android:text="@string/h2_about"
                android:textColor="#FBFAFA"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/settingsAppDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:paddingHorizontal="20dp"
                android:paddingBottom="20dp"
                android:text="@string/settings_app_description"
                android:textAlignment="textStart"
                android:textColor="#FFFDFD"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/h2ScheduleSession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/open_sans_bold"
                android:padding="20dp"
                android:text="@string/h2_schedule_session"
                android:textColor="#FBFAFA"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/settingsChosenTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/settings_chosen_time"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnPickTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showTimePickerDialog"
                    android:text="@string/btn_pick_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnSetAlarm"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnSetAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:fontFamily="@font/open_sans_bold"
                    android:onClick="setAlarm"
                    android:text="@string/btn_set_alarm"
                    android:textColor="@color/theme_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btnPickTime"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/h2ChangeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/open_sans_bold"
                android:padding="20dp"
                android:text="@string/h2_change_name"
                android:textColor="#FBFAFA"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="423dp">

                <EditText
                    android:id="@+id/editTextChangePuppyName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="20dp"
                    android:paddingBottom="20dp"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="316dp">

                <Button
                    android:id="@+id/btnUpdateName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#FFFFFF"
                    android:fontFamily="@font/open_sans_bold"
                    android:onClick="setPuppyName"
                    android:text="@string/btn_update_name"
                    android:textColor="@color/theme_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>